@@ -1,14 +1,0 @@
-pre-start script
-# XXX commented out and replaced with workaround until
-#     https://bugs.launchpad.net/ubuntu/+source/postgrey/+bug/981789
-#     is fixed
-#    service postgrey stop || true
-    start-stop-daemon --stop --oknodo --pidfile /var/run/postgrey.pid  || true
-    rm -f /var/run/postgrey.pid
-end script
-
-exec /usr/sbin/postgrey --inet 127.0.0.1:60000  --delay=300 --max-age=35 --retry-window=48h
-respawn
-
-
-
