@@ -1,40 +1,0 @@
-<%args>
-$address
-$port
-$delay
-$maxAge
-$retryWindow
-$text        => undef
-$privacy     => 0
-</%args>
-<%init>
-my $params;
-$params .= "--delay=$delay ";
-$params .= "--max-age=$maxAge ";
-
-$retryWindow .= 'h'; # retry windows is in hours
-$params .= "--retry-window=$retryWindow ";
-
-if ($text) {
-   # we depend in 'Greylisted' word for logging greylist events
-   if (not ($text =~ m/Greylisted/)) {
-           $text = 'Greylisted. ' . $text;
-   }
-  $params .= "--greylist-text=$text ";
-}
-
-if ($privacy) {
-  $params .= "--privacy ";
-}
-</%init>
-pre-start script
-# XXX commented out and replaced with workaround until
-#     https://bugs.launchpad.net/ubuntu/+source/postgrey/+bug/981789
-#     is fixed
-#    service postgrey stop || true
-    start-stop-daemon --stop --oknodo --pidfile /var/run/postgrey.pid  || true
-    rm -f /var/run/postgrey.pid
-end script
-
-exec /usr/sbin/postgrey --inet <% $address %>:<% $port %>  <% $params %>
-respawn
