@@ -1,4 +1,5 @@
 5.0
+	+ Use system daemons instead of old custom upstart ones
 	+ Integration only with external mailfilter
 4.2
 	+ Update version to 4.2
